[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BossPolygon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Vertex.tscn" type="PackedScene" id=2]

[node name="BossPolygon" type="Area2D"]
position = Vector2( 225, 500 )
rotation = 3201.84
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 200, 0, 100, 173.205, -100, 173.205, -200, 2.44921e-14, -100, -173.205, 100, -173.205, 200, -4.89843e-14 )
width = 30.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Vertices" type="Node2D" parent="."]

[node name="Vertex" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex2" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex3" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex4" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex5" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex6" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex7" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Vertex8" parent="Vertices" instance=ExtResource( 2 )]
visible = false
position = Vector2( 200, 0 )
colors = [ Color( 0.0196078, 0.611765, 0, 1 ), Color( 0, 0.431373, 0.666667, 1 ), Color( 0.72549, 0.729412, 0, 1 ) ]

[node name="Tween" type="Tween" parent="."]

[node name="VertexTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="VertexTimer" to="." method="_on_VertexTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
